--- a/src/Leafing.UnitTest.NoConfig/Leafing.UnitTest.NoConfig.csproj
+++ b/src/Leafing.UnitTest.NoConfig/Leafing.UnitTest.NoConfig.csproj
@@ -3,8 +3,6 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>8.0.30703</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{77F62E15-6EBD-4E19-BE39-D9D823717B50}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
@@ -31,10 +29,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="nunit.framework, Version=2.5.5.10112, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Resources\nunit.framework.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Design" />
@@ -44,6 +38,9 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="nunit.framework">
+      <HintPath>..\Resources\nunit.framework.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataSourceDesignerTest.cs" />
@@ -57,6 +54,18 @@
     <ProjectReference Include="..\Leafing.Data\Leafing.Data.csproj">
       <Project>{25AFD300-493A-4553-B4DC-129D3A9022A8}</Project>
       <Name>Leafing.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Leafing.Data.Oracle8\Leafing.Data.Oracle8.csproj">
+      <Project>{EE035A63-2ABA-4B2C-B716-780CF8CFB631}</Project>
+      <Name>Leafing.Data.Oracle8</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Leafing.Extra\Leafing.Extra.csproj">
+      <Project>{D009E584-9511-4243-9D2D-CD74079FB425}</Project>
+      <Name>Leafing.Extra</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Leafing.Membership\Leafing.Membership.csproj">
+      <Project>{9BCF3FDB-F024-4C6F-9B05-055C1136B9A5}</Project>
+      <Name>Leafing.Membership</Name>
     </ProjectReference>
     <ProjectReference Include="..\Leafing.Web\Leafing.Web.csproj">
       <Project>{A73147C3-73C4-4590-9EC4-250AC83F4EF5}</Project>
