--- a/src/Leafing.UnitTest/Leafing.UnitTest.csproj
+++ b/src/Leafing.UnitTest/Leafing.UnitTest.csproj
@@ -3,8 +3,6 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30729</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{48E4289C-FABF-46F6-AC45-AAA4224F84D3}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
@@ -72,19 +70,16 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="nunit.framework, Version=2.5.5.10112, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Resources\nunit.framework.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
-    <Reference Include="System.configuration" />
-    <Reference Include="System.Core">
-      <RequiredTargetFramework>3.5</RequiredTargetFramework>
-    </Reference>
+    <Reference Include="System.Core" />
     <Reference Include="System.Data" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.ApplicationServices" />
     <Reference Include="System.Xml" />
+    <Reference Include="System.Configuration" />
+    <Reference Include="nunit.framework">
+      <HintPath>..\Resources\nunit.framework.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataTestBase.cs" />
@@ -223,10 +218,6 @@
       <Project>{891EAD10-3C90-4478-A695-71F5537C2AA2}</Project>
       <Name>Leafing.Core</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Leafing.Extra\Leafing.Extra.csproj">
-      <Project>{D009E584-9511-4243-9D2D-CD74079FB425}</Project>
-      <Name>Leafing.Extra</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Leafing.MockSql\Leafing.MockSql.csproj">
       <Project>{C79309C3-3E59-490C-89EA-6A4AA05B0DD5}</Project>
       <Name>Leafing.MockSql</Name>
@@ -238,6 +229,18 @@
     <ProjectReference Include="..\Leafing.Web\Leafing.Web.csproj">
       <Project>{A73147C3-73C4-4590-9EC4-250AC83F4EF5}</Project>
       <Name>Leafing.Web</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Leafing.Extra\Leafing.Extra.csproj">
+      <Project>{D009E584-9511-4243-9D2D-CD74079FB425}</Project>
+      <Name>Leafing.Extra</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Leafing.Data.Oracle8\Leafing.Data.Oracle8.csproj">
+      <Project>{EE035A63-2ABA-4B2C-B716-780CF8CFB631}</Project>
+      <Name>Leafing.Data.Oracle8</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Leafing.Membership\Leafing.Membership.csproj">
+      <Project>{9BCF3FDB-F024-4C6F-9B05-055C1136B9A5}</Project>
+      <Name>Leafing.Membership</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
