Add config PartialUpdate, the default value is true.

--- a/src/Leafing.Data/Leafing.Data.csproj
+++ b/src/Leafing.Data/Leafing.Data.csproj
@@ -419,6 +419,8 @@
     <Compile Include="Model\Handler\Generator\ModelHandlerGenerator.cs" />
     <Compile Include="Model\Handler\Generator\MemberHandlerGenerator.cs" />
     <Compile Include="Driver\ConnectionStringCoder.cs" />
+    <Compile Include="Model\Saver\PartialUpdater.cs" />
+    <Compile Include="Model\Saver\Updater.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="DbEntry.snk" />
