Change NoticeLabel to NoticeLabelAdapter so that normal label works for DbEnbryDataSource.

--- a/src/Leafing.Web/Leafing.Web.csproj
+++ b/src/Leafing.Web/Leafing.Web.csproj
@@ -80,7 +80,6 @@
     <Compile Include="Common\DbEntryDataSourceViewSchema.cs" />
     <Compile Include="Common\DbEntryDesignerDataSourceView.cs" />
     <Compile Include="Common\LabelIDConverter.cs" />
-    <Compile Include="Common\NoticeLabel.cs" />
     <Compile Include="Common\NoticeLabelIDConverter.cs" />
     <Compile Include="DbEntryDataSource_Binder.cs" />
     <Compile Include="Common\PageHelper.cs" />
@@ -140,6 +139,7 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="XmlBuilder.cs" />
+    <Compile Include="Common\NoticeLabelAdapter.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Web.snk" />
