add  new transaction to DatabaseLog fix #8, add CssInputWarning to DataSource fix some bugs of show css in DataSource fix #7

--- a/src/Leafing.UnitTest/Leafing.UnitTest.csproj
+++ b/src/Leafing.UnitTest/Leafing.UnitTest.csproj
@@ -212,6 +212,7 @@
     <Compile Include="Web\UrlBuilderTest.cs" />
     <Compile Include="Web\XmlBuilderTest.cs" />
     <Compile Include="Web\PageHelperTest.cs" />
+    <Compile Include="util\timingTask\FpTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="UnitTest.config.xml">
