--- a/src/Leafing.MockSql/Leafing.MockSql.csproj
+++ b/src/Leafing.MockSql/Leafing.MockSql.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netcoreapp2.0</TargetFramework>
     <Version>6.0.0</Version>
     <Copyright>Copyright © Lifeng Liang 2019</Copyright>
     <Product>Leafing Framework</Product>
