--- a/src/Leafing.Core/Leafing.Core.csproj
+++ b/src/Leafing.Core/Leafing.Core.csproj
@@ -1,7 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <Version>6.0.0</Version>
+    <Copyright>Copyright © Lifeng Liang 2019</Copyright>
+    <Product>Leafing Framework</Product>
+    <Authors>Lifeng Liang</Authors>
+    <Company>Lifeng Liang</Company>
+    <PackageProjectUrl>http://github.com/Lifeng-Liang/DbEntry/</PackageProjectUrl>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>Core.snk</AssemblyOriginatorKeyFile>
     <DelaySign>false</DelaySign>
