--- a/src/Leafing.UnitTest/Leafing.UnitTest.csproj
+++ b/src/Leafing.UnitTest/Leafing.UnitTest.csproj
@@ -2,13 +2,15 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
-
+    <Version>6.0.0</Version>
+    <Copyright>Copyright © Lifeng Liang 2019</Copyright>
+    <Product>Leafing Framework</Product>
+    <Authors>Lifeng Liang</Authors>
+    <Company>Lifeng Liang</Company>
+    <PackageProjectUrl>http://github.com/Lifeng-Liang/DbEntry/</PackageProjectUrl>
     <IsPackable>false</IsPackable>
-
     <SignAssembly>true</SignAssembly>
-
     <AssemblyOriginatorKeyFile>UnitTest.snk</AssemblyOriginatorKeyFile>
-
     <DelaySign>false</DelaySign>
   </PropertyGroup>
 
